<resources>
    <string-array name="tabs_mode">
        <item>Good</item>
        <item>Best</item>
        <item>All</item>
    </string-array>
    <string name="app_name" translatable="false">JoyReactor</string>
    <string name="add_tag">Add tag</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="favorite">Favorite</string>
    <string name="feed">Feed</string>
    <string name="post_acitivty">Post</string>
    <string name="create_tag">Create tag</string>
    <string name="tag_name">Tag name</string>
    <string name="example_tag">Example: Android, Anime</string>
    <string name="required_field">Required field</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Sign out</string>
    <string name="activity_private_messages">Private messages</string>
    <string name="new_posts">New posts</string>
    <string name="apply_caps">APPLY</string>
    <string name="load_more_caps">LOAD MORE</string>
    <string name="old_posts">old posts</string>
    <string name="rating">Rating:</string>
    <string name="star_progress">New star progress:</string>
    <string name="login_error">Can\'t login. Try later.</string>
    <string name="your_new_message_here">Your new message here…</string>
    <string name="you_are_not_authorized">You are not authorized</string>
    <string name="send_feedback">Send feedback</string>
    <string name="updates_available">Updates available</string>
    <string name="open">Open</string>
    <string name="write_feedback">Write feedback</string>
    <string name="error_email_client_not_installed">You don\'t have any email client installed.</string>
    <string name="unknow_error">Unknown Error.\nTry again later.</string>
    <string name="unknown_error">Unknown Error.\nTry again later.</string>
    <string name="authorization">Authorization</string>
    <string name="get_profile">Get profile</string>
    <string name="write_comment">Write comment</string>
    <string name="reply">Reply</string>
    <string name="new_messages">You have new private messages</string>
    <string name="click_to_open">Click to show</string>
    <string name="private_message_service_label">Check new private messages</string>
    <string name="not_yet_implemented">Not yet implemented</string>
    <string name="comment_sent">Comment sent</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">Profile</string>

    <string name="title_activity_login">Login</string>
    <string name="unknown_error_occurred">Unknown error occurred</string>
    <string name="messages">Messages</string>
    <string name="title_activity_post">Post</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="save_image_to_gallery">Save to gallery</string>
    <string name="image_saved_to_gallery">Image saved to gallery</string>
    <string name="title_activity_create_comment">Create comment</string>
    <string name="create">Create</string>
    <string name="update_in_progress">Update in progress…</string>
    <string name="show_more">Show more</string>
    <string name="images">Images</string>
    <string name="post_images">Post images</string>
    <string name="similar_posts">Similar posts</string>
    <string name="comments">Comments</string>
    <string name="top_comments">Top comments</string>
    <string name="good">Good</string>
    <string name="best">Best</string>
    <string name="newPosts">New</string>
    <string name="send_feedback_by">Send feedback by</string>
    <string name="do_you_want_to_like_dislike_this_post">Do you want to like/dislike this post?</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="updating">Updating…</string>
    <string name="awards">Awards:</string>
    <string name="allow_permission_and_try_again">Allow permission and try again</string>
    <string name="please_wait">Please wait...</string>
</resources>
