<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <y2k.joyreactor.widget.RoundBorderLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <y2k.joyreactor.widget.WebImageView
                android:id="@+id/avatar"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:scaleType="centerCrop"/>
        </y2k.joyreactor.widget.RoundBorderLayout>

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:textColor="@color/text_secondary"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/rating"
                android:textColor="@color/text_secondary"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_secondary"
                android:textSize="14sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="17dp"
            android:background="#E4E4E4"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/text_primary"
            android:padding="18dp">

            <RatingBar
                android:id="@+id/stars"
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:layout_gravity="center"
                android:isIndicator="true"
                android:numStars="10"
                android:progressDrawable="@drawable/drawable_star"/>
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E4E4E4"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/text_primary"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/star_progress"
                android:textColor="@color/text_secondary"
                android:textSize="14sp"/>

            <ProgressBar
                android:id="@+id/nextStarProgress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="21dp"
                android:layout_marginTop="12dp"
                android:max="100"
                android:progressDrawable="@drawable/drawable_progress"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E4E4E4"/>

        <Button
            android:id="@+id/logout"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/drawable_yellow_button"
            android:text="@string/logout"
            android:textColor="@color/text_primary"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            style="?android:progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/get_profile"
            android:textColor="#999"
            android:textSize="18sp"/>
    </LinearLayout>

    <include layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/text_secondary"
        android:gravity="center_horizontal"
        android:padding="30dp"
        android:text="@string/unknown_error"
        android:textAllCaps="true"
        android:textColor="@color/text_primary"
        android:visibility="gone"/>
</FrameLayout>